# polytools

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  alt_accounts.txt  blacklist.txt  diesel.toml  hof_alt_accounts.txt  hof_blacklist.txt  hof_points.txt  hof_rankings.txt  hof_tracks.txt  setup.sh  userIDs.json
.github/workflows/: rust.yml
.woodpecker/: build.yaml
lists/: 0.5_official_tracks.txt  community_tracks.txt  hof_codes.txt  hof_tracks.txt  hof_tracks_all.txt  official_tracks.txt
migrations/: 20250720045524_create_users.up.sql  20250720045527_create_admins.down.sql  20250720045527_create_admins.up.sql  20251018124248_add_totw.down.sql  20251018124248_add_totw.up.sql  20260321153209_totw_seasons.down.sql  20260321153209_totw_seasons.up.sql
migrations/2025-00-00-000000_create_users/: down.sql  up.sql
migrations/2025-03-16-173943_create_admins/: up.sql
migrations/2025-04-07-103716_update_game_version/: down.sql  up.sql
migrations/create_users/: up.sql
polycore/: Cargo.toml
polycore/src/: lib.rs
polyhistorian/: Cargo.toml
polyhistorian/src/: main.rs
polymanager/: Cargo.toml  default.toml
polymanager/src/: config.rs  db.rs  lib.rs  main.rs  manager.rs  tui.rs
polynetworker/: Cargo.toml
polynetworker/src/: main.rs
polytracker/: .gitignore  Cargo.toml  README.md
polytracker/src/: commands.rs  db.rs  main.rs  schema.rs  utils.rs
polyupdater/: Cargo.toml
polyupdater/src/: main.rs
polyweb/: .env.example  .gitignore  Cargo.toml
polyweb/src/: api.rs  main.rs  parsers.rs
polyweb/templates/: base.html  community.html  history.html  history_home.html  hof.html  index.html  lb_custom_home.html  lb_standard_home.html  leaderboard.html  privacy_policy.html  track_leaderboard.html  tutorial.html
static/: scripts.js  site.webmanifest  style.css
templates/: base.html.tera  community.html.tera  history.html.tera  history_home.html.tera  hof.html.tera  index.html.tera  lb_custom_home.html.tera  lb_standard_home.html.tera  leaderboard.html.tera  track_leaderboard.html.tera  tutorial.html.tera
