[package]
name = "polycore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
dotenvy = "0.15.7"
facet = "0.28.3"
facet-json = "0.28.2"
futures = "0.3.31"
regex = "1.11.2"
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_regex = "1.1.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["fs"] }
