[package]
name = "polycore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dotenvy = "0.15.7"
facet = "0.43.2"
facet-json = "0.43.2"
futures = "0.3.32"
regex = "1.12.3"
reqwest = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_regex = "1.1.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
