[package]
name = "polyhistorian"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
facet = "0.28.3"
facet-json = "0.28.2"
filenamify = "0.1.2"
polycore = { version = "0.1.0", path = "../polycore" }
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
