[package]
name = "polyhistorian"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
facet = "0.43.2"
facet-json = "0.43.2"
filenamify = "0.1.2"
polycore = { version = "0.1.0", path = "../polycore" }
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.52.3", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
