[package]
name = "polymanager"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0.100"
crossterm = "0.29.0"
facet = "0.43.2"
facet-toml = "0.43.2"
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "fs", "signal", "time", "process", "full"] }
