[package]
name = "polymanager"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0.102"
crossterm = "0.29.0"
facet = "0.46.4"
facet-toml = "0.46.1"
ratatui = "0.30.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "signal", "time", "process", "full"] }
