[package]
name = "polynetworker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros"] }
facet = "0.46.0"
facet-json = { version = "0.46.0", features = ["axum"] }
reqwest = "0.13.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
