[package]
name = "polytracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
dotenvy = "0.15.7"
facet = "0.28.3"
facet-json = "0.28.2"
poise = "0.6.1"
polycore = { version = "0.1.0", path = "../polycore" }
polytrack-codes = "0.2.1"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
sha256 = "1.6.0"
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
unicode-width = "0.2.0"
