[package]
name = "polytracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
dotenvy = "0.15.7"
facet = "0.43.2"
facet-json = "0.43.2"
poise = "0.6.1"
polycore = { version = "0.1.0", path = "../polycore" }
polytrack-codes = "0.2.4"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
sha256 = "1.6.0"
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
unicode-width = "0.2.2"
