[package]
name = "polytracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dotenvy = "0.15.7"
facet = "0.43.2"
facet-json = "0.43.2"
poise = "0.6.2"
polycore = { version = "0.1.0", path = "../polycore" }
polytrack-codes = "0.3.0"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
sha256 = "1.6.0"
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
unicode-width = "0.2.2"
