[package]
name = "polyupdater"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
dotenvy = "0.15.7"
facet = "0.28.3"
facet-json = "0.28.2"
futures = "0.3.31"
poise = "0.6.1"
polycore = { version = "0.1.0", path = "../polycore" }
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
