[package]
name = "polyupdater"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dotenvy = "0.15.7"
facet = "0.43.2"
facet-json = "0.43.2"
futures = "0.3.32"
poise = "0.6.2"
polycore = { version = "0.1.0", path = "../polycore" }
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
