[package]
name = "polyweb"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
polycore = { version = "0.1.0", path = "../polycore" }
chrono = "0.4.43"
filenamify = "0.1.2"
facet = "0.43.2"
facet-json = { version = "0.43.2", features = ["axum"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
axum = { version = "0.8.8", features = ["macros"] }
askama = "0.15.4"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
